# natural-language-processing

./: .gitattributes  .gitignore  README.md
assignment1/src/: N_gram_and_Log_Reg_Tutorial.ipynb  devlog.md  inspect_errors.py  inspected.txt  main.ipynb  main.py  pyproject.toml  tutorial_exercises_complete.ipynb
assignment1/src/utils/: config.py  data.py  evaluate_models.py  helpers.py  preprocessing.py
assignment2/: README.md  config.py  data_utils.py  devlog.md  experiments.py  hyperparameter_tuning.py  instructions.md  main.py  plots.py  pyproject.toml  rnn_yelp_review_classification.ipynb  seed.py  tokenizer_utils.py  training.py
assignment2/models/: cnn.py  lstm.py
assignment2/report/: nlp_2.tex  preamble.tex  references.bib
assignment2/report/sections/: 10_appendixc.tex  1_dataset_setup.tex  2_models.tex  3_experimental_protocol.tex  4_results.tex  5_error_analysis.tex  6_discussion.tex  7_limitations.tex  8_appendix.tex  9_appendixb.tex
assignment2/src/: examples.py  experiments.py  generate_appendix.py  hyperparameter_tuning.py  lstm_cnn_gclip_yelp.ipynb  main.ipynb  main.py  pyproject.toml  run_experiments.sh  run_experiments_habrok.sh  submit_habrok.sh  test_experiments.sh  test_experiments_habrok.sh  visualize_results.py
assignment2/src/experiment_cnn_seq128/: classification_report.txt  confusion_matrix.json  hyperparameter_tuning_cnn.json  misclassified_examples_cnn.jsonl  model_config.json  training_results.json
assignment2/src/experiment_cnn_seq256/: classification_report.txt  confusion_matrix.json  hyperparameter_tuning_cnn.json  misclassified_examples_cnn.jsonl  model_config.json  training_results.json
assignment2/src/experiment_cnn_seq64/: classification_report.txt  confusion_matrix.json  hyperparameter_tuning_cnn.json  misclassified_examples_cnn.jsonl  model_config.json  training_results.json
assignment2/src/experiment_cnn_tuning/: hyperparameter_tuning_cnn.json
assignment2/src/experiment_lstm_seq128/: classification_report.txt  confusion_matrix.json  hyperparameter_tuning_lstm.json  misclassified_examples_lstm.jsonl  model_config.json  tokenizer_coverage.json  training_results.json
assignment2/utils/: tokanizer.py
assignment3/src/: .gitignore  README.md  data-exploration.ipynb  evaluation.py  generate_comparison_table.py  instructions.md  label_noise_sensitivity.py  main.py  misclassified_examples.json  model_card.md  pyproject.toml  robustness_slices.py  run_assignment3_pipeline.py  run_lstm_overfitting_ablation.sh  run_lstm_overfitting_experiment.py  todo.md
penguinlp/: pyproject.toml
(+97 files in other folders)
