[project]
name = "assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "omegaconf>=2.3.0",
    "penguinlp",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
penguinlp = { path = "../penguinlp", editable = true }
