[project]
name = "penguinlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sigurdur Haukur Birgisson", email = "56935611+sigurdurhaukur@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.0",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
