[project]
name = "src_assignment3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=4.8.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "omegaconf>=2.3.0",
    "optuna>=4.8.0",
    "penguinlp",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers[torch]>=5.3.0",
]

[tool.uv.sources]
penguinlp = { path = "../../penguinlp", editable = true }
